# benchmark-aucpr

./: .gitignore  README.md  benchmark.sh  main.cpp  makefile
model/: gen_csv.py  pyproject.toml
src/: BatchPRAUC.cpp  BatchPRAUC.hpp  RollingPRAUC.cpp  RollingPRAUC.hpp
